// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should allow expandable cell content: expand cell event 1`] = `
Array [
  Array [
    Object {
      "cellIndex": 0,
      "cells": Array [
        Object {
          "content": "dolor",
          "expandedContent": "dolor expandable content",
          "props": Object {
            "compoundExpand": Object {
              "isExpanded": true,
              "onToggle": [Function],
            },
            "dataLabel": undefined,
            "isActionCell": undefined,
            "noPadding": undefined,
            "width": undefined,
          },
        },
      ],
      "isExpanded": true,
      "rowIndex": 0,
      "type": "compound",
    },
  ],
]
`;

exports[`Table Component should allow expandable cell content: expandable cell content 1`] = `
<TableComposable
  aria-label={null}
  borders={true}
  className="quipucords-table "
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={true}
    className="quipucords-table "
    innerRef={null}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-3"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Tbody
        isExpanded={false}
        key="parent-row-[{\\"content\\":\\"dolor\\",\\"expandedContent\\":\\"dolor expandable content\\",\\"props\\":{\\"compoundExpand\\":{\\"isExpanded\\":false}}}]"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={false}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="row-[{\\"content\\":\\"dolor\\",\\"expandedContent\\":\\"dolor expandable content\\",\\"props\\":{\\"compoundExpand\\":{\\"isExpanded\\":false}}}]"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-9"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    compoundExpand={
                      Object {
                        "isExpanded": false,
                        "onToggle": [Function],
                      }
                    }
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      compoundExpand={
                        Object {
                          "isExpanded": false,
                          "onToggle": [Function],
                        }
                      }
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td pf-c-table__compound-expansion-toggle"
                      >
                        <button
                          aria-expanded={false}
                          className="pf-c-table__button"
                          onClick={[Function]}
                          type="button"
                        >
                          <TableText>
                            <span
                              className="pf-c-table__text"
                              onMouseEnter={[Function]}
                            >
                              dolor
                            </span>
                          </TableText>
                        </button>
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
      <Tbody
        isExpanded={false}
        key="generatedid-"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={false}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-10"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should allow expandable cell content: expanded cell 1`] = `
<TableComposable
  aria-label={null}
  borders={true}
  className="quipucords-table "
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={true}
    className="quipucords-table "
    innerRef={null}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-3"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Tbody
        isExpanded={true}
        key="parent-row-[{\\"content\\":\\"dolor\\",\\"expandedContent\\":\\"dolor expandable content\\",\\"props\\":{\\"compoundExpand\\":{\\"isExpanded\\":true}}}]"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={true}
        >
          <tbody
            className="pf-m-expanded"
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="row-[{\\"content\\":\\"dolor\\",\\"expandedContent\\":\\"dolor expandable content\\",\\"props\\":{\\"compoundExpand\\":{\\"isExpanded\\":true}}}]"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-11"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    compoundExpand={
                      Object {
                        "isExpanded": true,
                        "onToggle": [Function],
                      }
                    }
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      compoundExpand={
                        Object {
                          "isExpanded": true,
                          "onToggle": [Function],
                        }
                      }
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td pf-c-table__compound-expansion-toggle pf-m-expanded"
                      >
                        <button
                          aria-expanded={true}
                          className="pf-c-table__button"
                          onClick={[Function]}
                          type="button"
                        >
                          <TableText>
                            <span
                              className="pf-c-table__text"
                              onMouseEnter={[Function]}
                            >
                              dolor
                            </span>
                          </TableText>
                        </button>
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
            <Tr
              className="quipucords-table__tr"
              isExpanded={true}
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
                isExpanded={true}
              >
                <tr
                  className="quipucords-table__tr pf-c-table__expandable-row pf-m-expanded"
                  data-ouia-component-id="OUIA-Generated-TableRow-12"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td quipucords-table__td-expand-content"
                    colSpan={1}
                  >
                    <TdBase
                      className="quipucords-table__td quipucords-table__td-expand-content"
                      colSpan={1}
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td quipucords-table__td-expand-content"
                        colSpan={1}
                      >
                        <ExpandableRowContent>
                          <div
                            className="pf-c-table__expandable-row-content"
                          >
                            dolor expandable content
                          </div>
                        </ExpandableRowContent>
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
      <Tbody
        isExpanded={false}
        key="generatedid-"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={false}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-10"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should allow expandable row content: expand row event 1`] = `
Array [
  Array [
    Object {
      "cellIndex": -1,
      "cells": Array [
        Object {
          "content": "dolor",
        },
      ],
      "isExpanded": true,
      "rowIndex": 0,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow expandable row content: expandable row content 1`] = `
<TableComposable
  aria-label={null}
  borders={true}
  className="quipucords-table "
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={true}
    className="quipucords-table "
    innerRef={null}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Tbody
        isExpanded={false}
        key="generatedid-"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={false}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-6"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    expand={
                      Object {
                        "isExpanded": false,
                        "onToggle": [Function],
                        "rowIndex": 0,
                      }
                    }
                    key="expand-col-[{\\"content\\":\\"dolor\\"}]"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      expand={
                        Object {
                          "isExpanded": false,
                          "onToggle": [Function],
                          "rowIndex": 0,
                        }
                      }
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td pf-c-table__toggle"
                      >
                        <CollapseColumn
                          aria-labelledby="simple-node0 expand-toggle0"
                          id="expand-toggle0"
                          isOpen={false}
                          onToggle={[Function]}
                        >
                          <Button
                            aria-expanded={false}
                            aria-label="Details"
                            aria-labelledby="simple-node0 expand-toggle0"
                            className=""
                            id="expand-toggle0"
                            onClick={[Function]}
                            variant="plain"
                          >
                            <ButtonBase
                              aria-expanded={false}
                              aria-label="Details"
                              aria-labelledby="simple-node0 expand-toggle0"
                              className=""
                              id="expand-toggle0"
                              innerRef={null}
                              onClick={[Function]}
                              variant="plain"
                            >
                              <button
                                aria-disabled={false}
                                aria-expanded={false}
                                aria-label="Details"
                                aria-labelledby="simple-node0 expand-toggle0"
                                className="pf-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="expand-toggle0"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <div
                                  className="pf-c-table__toggle-icon"
                                >
                                  <AngleDownIcon
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      aria-labelledby={null}
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style={
                                        Object {
                                          "verticalAlign": "-0.125em",
                                        }
                                      }
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                      />
                                    </svg>
                                  </AngleDownIcon>
                                </div>
                              </button>
                            </ButtonBase>
                          </Button>
                        </CollapseColumn>
                      </td>
                    </TdBase>
                  </Td>
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        dolor
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
      <Tbody
        isExpanded={false}
        key="generatedid-"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={false}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-7"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should allow expandable row content: expanded row 1`] = `
<TableComposable
  aria-label={null}
  borders={true}
  className="quipucords-table "
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={true}
    className="quipucords-table "
    innerRef={null}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Tbody
        isExpanded={true}
        key="generatedid-"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={true}
        >
          <tbody
            className="pf-m-expanded"
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-6"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    expand={
                      Object {
                        "isExpanded": true,
                        "onToggle": [Function],
                        "rowIndex": 0,
                      }
                    }
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      expand={
                        Object {
                          "isExpanded": true,
                          "onToggle": [Function],
                          "rowIndex": 0,
                        }
                      }
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td pf-c-table__toggle"
                      >
                        <CollapseColumn
                          aria-labelledby="simple-node0 expand-toggle0"
                          id="expand-toggle0"
                          isOpen={true}
                          onToggle={[Function]}
                        >
                          <Button
                            aria-expanded={true}
                            aria-label="Details"
                            aria-labelledby="simple-node0 expand-toggle0"
                            className="pf-m-expanded"
                            id="expand-toggle0"
                            onClick={[Function]}
                            variant="plain"
                          >
                            <ButtonBase
                              aria-expanded={true}
                              aria-label="Details"
                              aria-labelledby="simple-node0 expand-toggle0"
                              className="pf-m-expanded"
                              id="expand-toggle0"
                              innerRef={null}
                              onClick={[Function]}
                              variant="plain"
                            >
                              <button
                                aria-disabled={false}
                                aria-expanded={true}
                                aria-label="Details"
                                aria-labelledby="simple-node0 expand-toggle0"
                                className="pf-c-button pf-m-plain pf-m-expanded"
                                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="expand-toggle0"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <div
                                  className="pf-c-table__toggle-icon"
                                >
                                  <AngleDownIcon
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      aria-labelledby={null}
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style={
                                        Object {
                                          "verticalAlign": "-0.125em",
                                        }
                                      }
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                      />
                                    </svg>
                                  </AngleDownIcon>
                                </div>
                              </button>
                            </ButtonBase>
                          </Button>
                        </CollapseColumn>
                      </td>
                    </TdBase>
                  </Td>
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        dolor
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
            <Tr
              className="quipucords-table__tr"
              isExpanded={true}
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
                isExpanded={true}
              >
                <tr
                  className="quipucords-table__tr pf-c-table__expandable-row pf-m-expanded"
                  data-ouia-component-id="OUIA-Generated-TableRow-8"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td quipucords-table__tr-expand-content"
                    colSpan={1}
                  >
                    <TdBase
                      className="quipucords-table__td quipucords-table__tr-expand-content"
                      colSpan={1}
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td quipucords-table__tr-expand-content"
                        colSpan={1}
                      >
                        <ExpandableRowContent>
                          <div
                            className="pf-c-table__expandable-row-content"
                          >
                            dolor sit expandable content
                          </div>
                        </ExpandableRowContent>
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
      <Tbody
        isExpanded={false}
        key="generatedid-"
      >
        <TbodyBase
          innerRef={null}
          isExpanded={false}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-7"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should allow selectable row content: select row content 1`] = `
Array [
  <input
    aria-label="Select all rows"
    name="check-all"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 0"
    checked={false}
    name="checkrow0"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 1"
    checked={false}
    name="checkrow1"
    onChange={[Function]}
    type="checkbox"
  />,
]
`;

exports[`Table Component should allow selectable row content: select row event 1`] = `
Array [
  Array [
    Object {
      "cells": Array [],
      "isSelected": true,
      "rowIndex": -1,
      "rows": Array [
        Object {
          "cells": Array [
            Object {
              "content": "dolor",
              "props": Object {
                "dataLabel": undefined,
                "isActionCell": undefined,
                "noPadding": undefined,
                "width": undefined,
              },
            },
          ],
          "expand": undefined,
          "expandedContent": undefined,
          "rowIndex": 0,
          "select": Object {
            "cells": Array [
              Object {
                "content": "dolor",
              },
            ],
            "disable": false,
            "isSelected": true,
            "onSelect": [Function],
            "rowIndex": 0,
          },
        },
        Object {
          "cells": Array [
            Object {
              "content": "sit",
            },
          ],
          "expand": undefined,
          "expandedContent": undefined,
          "rowIndex": 1,
          "select": Object {
            "cells": Array [
              "sit",
            ],
            "disable": false,
            "isSelected": true,
            "onSelect": [Function],
            "rowIndex": 1,
          },
        },
      ],
      "type": "all",
    },
  ],
]
`;

exports[`Table Component should allow selectable row content: selected row 1`] = `
Array [
  <input
    aria-label="Select all rows"
    name="check-all"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 0"
    checked={true}
    name="checkrow0"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 1"
    checked={true}
    name="checkrow1"
    onChange={[Function]}
    type="checkbox"
  />,
]
`;

exports[`Table Component should allow sortable content: sort event 1`] = `
Array [
  Array [
    Object {
      "cell": Object {
        "content": "lorem ipsum",
        "props": Object {
          "sort": Object {
            "columnIndex": 0,
            "onSort": [Function],
            "sortBy": Object {
              "direction": "asc",
              "index": 0,
            },
          },
        },
      },
      "cellIndex": 0,
      "cells": Array [
        Object {
          "content": "lorem ipsum",
          "props": Object {
            "sort": Object {
              "columnIndex": 0,
              "onSort": [Function],
              "sortBy": Object {
                "direction": "asc",
                "index": 0,
              },
            },
          },
        },
      ],
      "direction": "asc",
    },
  ],
  Array [
    Object {
      "cell": Object {
        "content": "lorem ipsum",
        "props": Object {
          "sort": Object {
            "columnIndex": 0,
            "onSort": [Function],
            "sortBy": Object {
              "direction": "desc",
              "index": 0,
            },
          },
        },
      },
      "cellIndex": 0,
      "cells": Array [
        Object {
          "content": "lorem ipsum",
          "props": Object {
            "sort": Object {
              "columnIndex": 0,
              "onSort": [Function],
              "sortBy": Object {
                "direction": "desc",
                "index": 0,
              },
            },
          },
        },
      ],
      "direction": "desc",
    },
  ],
]
`;

exports[`Table Component should allow sortable content: sortable content 1`] = `
<Th
  className="quipucords-table__th"
  key="generatedid-"
  sort={
    Object {
      "columnIndex": 0,
      "onSort": [Function],
      "sortBy": Object {
        "direction": "asc",
      },
    }
  }
>
  <ThBase
    className="quipucords-table__th"
    innerRef={null}
    sort={
      Object {
        "columnIndex": 0,
        "onSort": [Function],
        "sortBy": Object {
          "direction": "asc",
        },
      }
    }
  >
    <th
      aria-sort="none"
      className="quipucords-table__th pf-c-table__sort"
      onMouseEnter={[Function]}
      scope="col"
    >
      <SortColumn
        isSortedBy={false}
        onSort={[Function]}
        sortDirection=""
      >
        <button
          className="pf-c-table__button"
          onClick={[Function]}
          type="button"
        >
          <div
            className="pf-c-table__button-content"
          >
            <TableText>
              <span
                className="pf-c-table__text"
                onMouseEnter={[Function]}
              >
                lorem ipsum
              </span>
            </TableText>
            <span
              className="pf-c-table__sort-indicator"
            >
              <ArrowsAltVIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </ArrowsAltVIcon>
            </span>
          </div>
        </button>
      </SortColumn>
    </th>
  </ThBase>
</Th>
`;

exports[`Table Component should allow sortable content: sorted column, asc 1`] = `
<Th
  className="quipucords-table__th"
  key="generatedid-"
  sort={
    Object {
      "columnIndex": 0,
      "onSort": [Function],
      "sortBy": Object {
        "direction": "asc",
        "index": 0,
      },
    }
  }
>
  <ThBase
    className="quipucords-table__th"
    innerRef={null}
    sort={
      Object {
        "columnIndex": 0,
        "onSort": [Function],
        "sortBy": Object {
          "direction": "asc",
          "index": 0,
        },
      }
    }
  >
    <th
      aria-sort="ascending"
      className="quipucords-table__th pf-c-table__sort pf-m-selected"
      onMouseEnter={[Function]}
      scope="col"
    >
      <SortColumn
        isSortedBy={true}
        onSort={[Function]}
        sortDirection="asc"
      >
        <button
          className="pf-c-table__button"
          onClick={[Function]}
          type="button"
        >
          <div
            className="pf-c-table__button-content"
          >
            <TableText>
              <span
                className="pf-c-table__text"
                onMouseEnter={[Function]}
              >
                lorem ipsum
              </span>
            </TableText>
            <span
              className="pf-c-table__sort-indicator"
            >
              <LongArrowAltUpIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                  />
                </svg>
              </LongArrowAltUpIcon>
            </span>
          </div>
        </button>
      </SortColumn>
    </th>
  </ThBase>
</Th>
`;

exports[`Table Component should allow sortable content: sorted column, desc 1`] = `
<Th
  className="quipucords-table__th"
  key="generatedid-"
  sort={
    Object {
      "columnIndex": 0,
      "onSort": [Function],
      "sortBy": Object {
        "direction": "desc",
        "index": 0,
      },
    }
  }
>
  <ThBase
    className="quipucords-table__th"
    innerRef={null}
    sort={
      Object {
        "columnIndex": 0,
        "onSort": [Function],
        "sortBy": Object {
          "direction": "desc",
          "index": 0,
        },
      }
    }
  >
    <th
      aria-sort="descending"
      className="quipucords-table__th pf-c-table__sort pf-m-selected"
      onMouseEnter={[Function]}
      scope="col"
    >
      <SortColumn
        isSortedBy={true}
        onSort={[Function]}
        sortDirection="desc"
      >
        <button
          className="pf-c-table__button"
          onClick={[Function]}
          type="button"
        >
          <div
            className="pf-c-table__button-content"
          >
            <TableText>
              <span
                className="pf-c-table__text"
                onMouseEnter={[Function]}
              >
                lorem ipsum
              </span>
            </TableText>
            <span
              className="pf-c-table__sort-indicator"
            >
              <LongArrowAltDownIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                  />
                </svg>
              </LongArrowAltDownIcon>
            </span>
          </div>
        </button>
      </SortColumn>
    </th>
  </ThBase>
</Th>
`;

exports[`Table Component should allow variations in table layout: ariaLabel and summary 1`] = `
Object {
  "aria-label": "lorem ipsum aria-label",
  "borders": false,
  "children": Array [
    false,
    <Tbody>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="quipucords-table__td"
          >
            dolor
          </Td>
        </Tr>
      </React.Fragment>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="quipucords-table__td"
          >
            sit
          </Td>
        </Tr>
      </React.Fragment>
    </Tbody>,
  ],
  "className": "quipucords-table ",
  "summary": "lorem ipsum summary",
  "variant": "compact",
}
`;

exports[`Table Component should allow variations in table layout: borders and table header removed 1`] = `
<TableComposable
  aria-label={null}
  borders={false}
  className="quipucords-table "
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={false}
    className="quipucords-table "
    innerRef={null}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Tbody>
        <TbodyBase
          innerRef={null}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-4"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        dolor
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
            <Tr
              className="quipucords-table__tr"
              key="generatedid-"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-5"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="generatedid-"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should allow variations in table layout: className and variant 1`] = `
Object {
  "aria-label": "lorem ipsum aria-label",
  "borders": false,
  "children": Array [
    false,
    <Tbody>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="quipucords-table__td"
          >
            dolor
          </Td>
        </Tr>
      </React.Fragment>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="quipucords-table__td"
          >
            sit
          </Td>
        </Tr>
      </React.Fragment>
    </Tbody>,
  ],
  "className": "quipucords-table lorem-ipsum-class",
  "summary": "lorem ipsum summary",
  "variant": "compact",
}
`;

exports[`Table Component should allow variations in table layout: generated rows 1`] = `
<TableComposable
  aria-label={null}
  borders={true}
  className="quipucords-table "
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={true}
    className="quipucords-table "
    innerRef={null}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Thead>
        <TheadBase
          innerRef={null}
        >
          <thead
            className=""
          >
            <Tr
              className="quipucords-table__tr"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-1"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Th
                    className="quipucords-table__th"
                    key="th-cell-lorem ipsum"
                  >
                    <ThBase
                      className="quipucords-table__th"
                      innerRef={null}
                    >
                      <th
                        className="quipucords-table__th"
                        onMouseEnter={[Function]}
                        scope="col"
                      >
                        lorem ipsum
                      </th>
                    </ThBase>
                  </Th>
                </tr>
              </TrBase>
            </Tr>
          </thead>
        </TheadBase>
      </Thead>
      <Tbody>
        <TbodyBase
          innerRef={null}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="row-[{\\"content\\":\\"dolor\\"}]"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-2"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="cell-dolor"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        dolor
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
            <Tr
              className="quipucords-table__tr"
              key="row-[{\\"content\\":\\"sit\\"}]"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-3"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="quipucords-table__td"
                    key="cell-sit"
                  >
                    <TdBase
                      className="quipucords-table__td"
                      innerRef={null}
                    >
                      <td
                        className="quipucords-table__td"
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should pass child components, nodes when there are no rows: children 1`] = `
<Grid>
  <GridItem
    span={12}
  >
    Loading...
  </GridItem>
</Grid>
`;

exports[`Table Component should render a basic component: basic 1`] = `
<Grid>
  <GridItem
    span={12}
  >
    <TableEmpty
      t={[Function]}
    />
  </GridItem>
</Grid>
`;
